--- a/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
+++ b/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
@@ -47,8 +47,8 @@
               id="softwaresFilter"></ion-input>
           </ion-item>
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-            id="softwaresTable" [rowData]="softwares" [columnDefs]="softwareColumnDefs" rowSelection="multiple"
-            [context]="context" (gridReady)="softwaresReady($event)" (selectionChanged)="softwaresChanged()">
+            id="softwaresTable" [rowData]="softwares" [columnDefs]="softwareColumnDefs"
+            [context]="context" (gridReady)="softwaresReady($event)">
           </ag-grid-angular>
         </ion-col>
         <ion-col *ngIf="hwconfs.length > 0" size=12 sizeMd=2 sizeLg=2 sizeXl=2>
@@ -57,8 +57,8 @@
               id="hwconfsFilter"></ion-input>
           </ion-item>
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-            id="hwconfsTable" [rowData]="hwconfs" [columnDefs]="hwconfColumnDefs" rowSelection="multiple"
-            [context]="context" (gridReady)="hwconfsReady($event)" (selectionChanged)="hwconfsChanged()">
+            id="hwconfsTable" [rowData]="hwconfs" [columnDefs]="hwconfColumnDefs"
+            [context]="context" (gridReady)="hwconfsReady($event)">
           </ag-grid-angular>
         </ion-col>
         <ion-col *ngIf="rooms.length > 0" size=12 sizeMd=2 sizeLg=2 sizeXl=2>
@@ -67,8 +67,8 @@
               id="roomsFilter"></ion-input>
           </ion-item>
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-            id="roomsTable" [rowData]="rooms" [columnDefs]="roomColumnDefs" rowSelection="multiple" [context]="context"
-            (gridReady)="roomsReady($event)" (selectionChanged)="roomsChanged()">
+            id="roomsTable" [rowData]="rooms" [columnDefs]="roomColumnDefs"[context]="context"
+            (gridReady)="roomsReady($event)">
           </ag-grid-angular>
         </ion-col>
         <ion-col *ngIf="devices.length > 0" size=12 sizeMd=2 sizeLg=2 sizeXl=2>
@@ -77,8 +77,8 @@
               id="devicesFilter"></ion-input>
           </ion-item>
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-            id="devicesTable" [rowData]="devices" [columnDefs]="deviceColumnDefs" rowSelection="multiple"
-            [context]="context" (gridReady)="devicesReady($event)" (selectionChanged)="devicesChanged()">
+            id="devicesTable" [rowData]="devices" [columnDefs]="deviceColumnDefs"
+            [context]="context" (gridReady)="devicesReady($event)">
           </ag-grid-angular>
         </ion-col>
       </ion-row>
@@ -91,7 +91,7 @@
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
             id="availableSoftwaresTable" [rowData]="softwareService.availableSoftwares"
             [columnDefs]="softwareColumnDefs" rowSelection="multiple" [rowMultiSelectWithClick]="true" [context]="context"
-            (gridReady)="availableSoftwaresReady($event)" (selectionChanged)="availableSoftwaresChanged()">
+            (gridReady)="availableSoftwaresReady($event)">
           </ag-grid-angular>
         </ion-col>
         <ion-col size=12 sizeMd=3 sizeLg=3 sizeXl=3>
@@ -102,7 +102,7 @@
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
             id="availableHwconfsTable" [rowData]="availableHwconfs" [columnDefs]="hwconfColumnDefs"
             rowSelection="multiple" [rowMultiSelectWithClick]="true" [context]="context"
-            (gridReady)="availableHwconfsReady($event)" (selectionChanged)="availableHwconfsChanged()">
+            (gridReady)="availableHwconfsReady($event)">
           </ag-grid-angular>
         </ion-col>
         <ion-col size=12 sizeMd=3 sizeLg=3 sizeXl=3>
@@ -112,8 +112,7 @@
           </ion-item>
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
             id="availableRoomsTable" [rowData]="availableRooms" [columnDefs]="roomColumnDefs" rowSelection="multiple"
-            [rowMultiSelectWithClick]="true" [context]="context" (gridReady)="availableRoomsReady($event)"
-            (selectionChanged)="availableRoomsChanged()">
+            [rowMultiSelectWithClick]="true" [context]="context" (gridReady)="availableRoomsReady($event)">
           </ag-grid-angular>
         </ion-col>
         <ion-col size=12 sizeMd=3 sizeLg=3 sizeXl=3>
@@ -124,7 +123,7 @@
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
             id="availableDevicesTable" [rowData]="availableDevices" [columnDefs]="deviceColumnDefs"
             rowSelection="multiple" [rowMultiSelectWithClick]="true" [context]="context"
-            (gridReady)="availableDevicesReady($event)" (selectionChanged)="availableDevicesChanged()">
+            (gridReady)="availableDevicesReady($event)">
           </ag-grid-angular>
         </ion-col>
       </ion-row>
