--- a/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
+++ b/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
@@ -47,8 +47,8 @@
               id="softwaresFilter"></ion-input>
           </ion-item>
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-            id="softwaresTable" [rowData]="softwares" [columnDefs]="softwareColumnDefs" rowSelection="multiple"
-            [context]="context" (gridReady)="softwaresReady($event)" (selectionChanged)="softwaresChanged()">
+            id="softwaresTable" [rowData]="softwares" [columnDefs]="softwareColumnDefs"
+            [context]="context" (gridReady)="softwaresReady($event)">
           </ag-grid-angular>
         </ion-col>
         <ion-col *ngIf="hwconfs.length > 0" size=12 sizeMd=2 sizeLg=2 sizeXl=2>
@@ -57,8 +57,8 @@
               id="hwconfsFilter"></ion-input>
           </ion-item>
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-            id="hwconfsTable" [rowData]="hwconfs" [columnDefs]="hwconfColumnDefs" rowSelection="multiple"
-            [context]="context" (gridReady)="hwconfsReady($event)" (selectionChanged)="hwconfsChanged()">
+            id="hwconfsTable" [rowData]="hwconfs" [columnDefs]="hwconfColumnDefs"
+            [context]="context" (gridReady)="hwconfsReady($event)">
           </ag-grid-angular>
         </ion-col>
         <ion-col *ngIf="rooms.length > 0" size=12 sizeMd=2 sizeLg=2 sizeXl=2>
@@ -67,8 +67,8 @@
               id="roomsFilter"></ion-input>
           </ion-item>
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-            id="roomsTable" [rowData]="rooms" [columnDefs]="roomColumnDefs" rowSelection="multiple" [context]="context"
-            (gridReady)="roomsReady($event)" (selectionChanged)="roomsChanged()">
+            id="roomsTable" [rowData]="rooms" [columnDefs]="roomColumnDefs" [context]="context"
+            (gridReady)="roomsReady($event)">
           </ag-grid-angular>
         </ion-col>
         <ion-col *ngIf="devices.length > 0" size=12 sizeMd=2 sizeLg=2 sizeXl=2>
@@ -77,8 +77,8 @@
               id="devicesFilter"></ion-input>
           </ion-item>
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-            id="devicesTable" [rowData]="devices" [columnDefs]="deviceColumnDefs" rowSelection="multiple"
-            [context]="context" (gridReady)="devicesReady($event)" (selectionChanged)="devicesChanged()">
+            id="devicesTable" [rowData]="devices" [columnDefs]="deviceColumnDefs"
+            [context]="context" (gridReady)="devicesReady($event)">
           </ag-grid-angular>
         </ion-col>
       </ion-row>
