--- a/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
+++ b/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
@@ -91,7 +91,7 @@
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
             id="availableSoftwaresTable" [rowData]="softwareService.availableSoftwares"
             [columnDefs]="softwareColumnDefs" rowSelection="multiple" [rowMultiSelectWithClick]="true" [context]="context"
-            (gridReady)="availableSoftwaresReady($event)">
+            (gridReady)="availableSoftwaresReady($event)" (selectionChanged)="availableSoftwaresChanged()">
           </ag-grid-angular>
         </ion-col>
         <ion-col size=12 sizeMd=3 sizeLg=3 sizeXl=3>
@@ -102,7 +102,7 @@
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
             id="availableHwconfsTable" [rowData]="availableHwconfs" [columnDefs]="hwconfColumnDefs"
             rowSelection="multiple" [rowMultiSelectWithClick]="true" [context]="context"
-            (gridReady)="availableHwconfsReady($event)">
+            (gridReady)="availableHwconfsReady($event)" (selectionChanged)="availableHwconfsChanged()">
           </ag-grid-angular>
         </ion-col>
         <ion-col size=12 sizeMd=3 sizeLg=3 sizeXl=3>
@@ -112,7 +112,8 @@
           </ion-item>
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
             id="availableRoomsTable" [rowData]="availableRooms" [columnDefs]="roomColumnDefs" rowSelection="multiple"
-            [rowMultiSelectWithClick]="true" [context]="context" (gridReady)="availableRoomsReady($event)">
+            [rowMultiSelectWithClick]="true" [context]="context" (gridReady)="availableRoomsReady($event)"
+            (selectionChanged)="availableRoomsChanged()">
           </ag-grid-angular>
         </ion-col>
         <ion-col size=12 sizeMd=3 sizeLg=3 sizeXl=3>
@@ -123,7 +124,7 @@
           <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
             id="availableDevicesTable" [rowData]="availableDevices" [columnDefs]="deviceColumnDefs"
             rowSelection="multiple" [rowMultiSelectWithClick]="true" [context]="context"
-            (gridReady)="availableDevicesReady($event)">
+            (gridReady)="availableDevicesReady($event)" (selectionChanged)="availableDevicesChanged()">
           </ag-grid-angular>
         </ion-col>
       </ion-row>
