--- a/src/app/protected/cranix/users/lists/users-lists.page.html
+++ b/src/app/protected/cranix/users/lists/users-lists.page.html
@@ -14,7 +14,7 @@
       </ion-tab-button>
       <ion-tab-button *ngIf="authService.isAllowed('parent.manage')" tab="parents" >
         <ion-icon name="people-circle" ></ion-icon>
-        <ion-label>{{ 'parents' | translate }}</ion-label>
+        <ion-label>{{ 'Parents' | translate }}</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
