--- a/src/app/protected/cranix/calendar/calendar.component.html
+++ b/src/app/protected/cranix/calendar/calendar.component.html
@@ -105,7 +105,7 @@
                                 </ng-template>
                                 <ng-template ionicSelectableValueTemplate let-ports="value">
                                     <div class="ionic-selectable-value-item">
-                                        {{ports.length}} {{'groups are seleceted'|translate}}
+                                        {{ports.length}} {{'groups are selected'|translate}}
                                     </div>
                                 </ng-template>
                             </ionic-selectable>
@@ -132,7 +132,7 @@
                                 </ng-template>
                                 <ng-template ionicSelectableValueTemplate let-ports="value">
                                     <div class="ionic-selectable-value-item">
-                                        {{ports.length}} {{'users are seleceted'|translate}}
+                                        {{ports.length}} {{'users are selected'|translate}}
                                     </div>
                                 </ng-template>
                             </ionic-selectable>
@@ -227,7 +227,7 @@
                 <ion-list>
                     <ion-item>
                         <ion-label>
-                            {{'If no items are seleceted all events are showed'|translate}}
+                            {{'If no items are selected all events are showed'|translate}}
                         </ion-label>
                     </ion-item>
                     <ion-item>
@@ -259,7 +259,7 @@
                             </ng-template>
                             <ng-template ionicSelectableValueTemplate let-ports="value">
                                 <div class="ionic-selectable-value-item">
-                                    {{ports.length}} {{'groups are seleceted'|translate}}
+                                    {{ports.length}} {{'groups are selected'|translate}}
                                 </div>
                             </ng-template>
                         </ionic-selectable>
@@ -285,7 +285,7 @@
                             </ng-template>
                             <ng-template ionicSelectableValueTemplate let-ports="value">
                                 <div class="ionic-selectable-value-item">
-                                    {{ports.length}} {{'rooms are seleceted'|translate}}
+                                    {{ports.length}} {{'rooms are selected'|translate}}
                                 </div>
                             </ng-template>
                         </ionic-selectable>
