--- a/src/app/protected/edu/lessons/ptms/ptms.component.html
+++ b/src/app/protected/edu/lessons/ptms/ptms.component.html
@@ -5,7 +5,7 @@
     <h1>{{'There is no PTM' | translate}} </h1>
     }@else{
     <ion-item *ngFor="let ptm of nextPtms">
-        <ion-button fill="clear" expand="full" (click)="selectPtm(ptm)">{{ptm.title}}</ion-button>
+        <ion-button fill="clear" expand="full" (click)="selectPTM(ptm)">{{ptm.title}}</ion-button>
     </ion-item>
     }
     }@else{
